# crypto_quant

./: .env.example  CLAUDE.md  CRYPTO_QUANT_ARCHITECTURE.md  DEVELOPMENT_ROADMAP.md  Dockerfile  Makefile  PROGRESS_SUMMARY.md  README.md  README_CNN_LSTM.md  README_DEMO.md  SPEC.md  TEST_SUMMARY.md  ai_strategy_enhanced.py  ai_strategy_pipeline.py  ai_strategy_simple.py  analyze_strategy.py  backtest_comparison_results.json  calibrate_temperature.py  check_demo_requirements.py  cnn_lstm_focal_loss.pth  config.yaml  debug_data_loading.py  demo_pipeline.py  demo_pipeline_README.md  docker-compose.test.yml  docker-compose.yml  download_full_historical_data.py  download_sample_data.py  integrated_backtest.py  integrated_backtest_enhanced.py  latest.pt  logistic_regression.pkl  lstm_latest.pt  main.py  model_comparison.py  prometheus.yml  pyproject.toml  random_forest.pkl  requirements-dev.txt  requirements.txt  (+12 more)
.claude/: hooks.yaml
backtest_results/: ai_backtest_results_20250708_222918.json  enhanced_ai_backtest_results_20250708_223745.json  enhanced_ai_backtest_results_20250708_223922.json  enhanced_ai_backtest_results_20250708_224007.json
backtesting/: backtest_engine.py  walk_forward_validator.py
config/: settings.py
crypto_quant/: __init__.py
data/: BTC_USDT_1m_extended_30days.csv  BTC_USDT_1m_last_3days.csv  BTC_USDT_1m_last_7days.csv  data_quality_report.md
data_pipeline/: __init__.py  binance_websocket.py  historical_downloader.py
features/: __init__.py  technical_indicators.py
models/: best_cnn_lstm_30d.pth  improved_cnn_lstm_model.pth
results/: intelligent_strategy_test.json  training_info.json  training_summary_30d.json
scripts/: backtest_cnn_lstm.py  rolling_backtest.py  simple_backtest.py  simple_fix.py  test_extended_features.py  test_intelligent_strategy.py  train_optimized.py  train_quick_fix.py  validate_data_split.py
sql/: init.sql
strategies/: __init__.py  (+1 more)
(+79 files in other folders)
